#ifndef JEU_H
#define JEU_H

#include "TypesEnum.h"

class Jeu{
    Extension extention;
public:
    Jeu();
    ~Jeu();

};



#endif