#ifndef MONUMENT_H
#define MONUMENT_H

class Monument{
    bool construit;
public:
    Monument();
    ~Monument();
    bool estConstruit();
    void construire();
};

#endif